FISH-5852 rewrite for java 8 compatibility
(cherry picked from commit 60c04c269d4500ec0d7d3a190c2365cc01404423)